fix z-index for the main

--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,7 @@ li a:hover {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	z-index: 6;
 	width: 100%;
 	height: 100%;
 	position: fixed;
@@ -109,7 +110,7 @@ li a:hover {
 	display: block;
 	height: 2px;
 	position: relative;
-	z-index: 2;
+	z-index: 10;
 	width: 24px;
 }
 
@@ -224,5 +225,6 @@ h2 {
 
 main {
 	position: relative;
+	z-index: -1;
 }
 
